--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon --inspect src/index.js",
     "watch": "sass --watch src/resource/scss:src/public/css",
+    "beautifull": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,13 +19,27 @@
     "url": "https://github.com/lilycuty/nodejs_blog/issues"
   },
   "homepage": "https://github.com/lilycuty/nodejs_blog#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.1.1",
+    "mongoose-slug-generator": "^1.0.4",
     "sass": "^1.70.0"
   },
   "devDependencies": {
+    "husky": "^9.0.6",
+    "lint-staged": "^15.2.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4"
   }
 }
