--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "express-handlebars": "^7.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.1.1",
+    "mongoose-delete": "^1.0.2",
     "mongoose-slug-generator": "^1.0.4",
+    "mongoose-slug-updater": "^3.3.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
